# AGReality

./: .gitignore  settings.gradle
agreality/: build.gradle
app/: CMakeLists.txt  build.gradle
app/cbuild/: CMakeCache.txt  Makefile  android_gradle_build.json  cmake_install.cmake
app/src/androidTest/java/com/example/p/agreality/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/nanosuit/: LICENSE.txt
app/src/main/assets/models/wraith/: Wraith_Raider_Starship.mtl
app/src/main/assets/shaders/: camera_fs.glsl  camera_vs.glsl  frag.glsl  img_fs.glsl  vert.glsl
app/src/main/java/com/example/p/agreality/: AGLogic.java  Config.java  CustomScene.java  LogicState.java  MainLogic.java  MainLoop.java  SimpleLogic.java
app/src/main/java/com/example/p/agreality/entities/imgs/: SetDirLightButton.java  SimpleButton.java
app/src/main/java/com/example/p/agreality/logics/: AbstractLogic.java  LoadingLogic.java  LogicState.java  MainLogic.java  SimpleLogic.java
app/src/main/java/com/example/p/engine/: AGLoop.java  AGRenderer.java  AGSurfaceView.java  App.java  Camera.java  Entity.java  MainActivity.java  Model.java  Movable.java  Scene.java  Screen.java
app/src/main/java/com/example/p/engine/entities/: Entity.java  ImageEntity.java  ModeledEntity.java  NullImageEntity.java  NullModelEntity.java  Resource.java  TouchListener.java
app/src/main/java/com/example/p/engine/hardware/: AGSensor.java  AGSensorManager.java  Camera2Manager.java  DeviceMovement.java  Hardware.java
app/src/main/java/com/example/p/engine/util/: File.java  TouchPicker.java
app/src/main/java/com/petostr/p/agreality/: Config.java  CustomScene.java  MainLoop.java
app/src/main/java/com/petostr/p/agreality/logics/: AbstractLogic.java  LoadingLogic.java
app/src/main/java/com/petostr/p/engine/: AGSurfaceView.java  App.java  MainActivity.java  Screen.java
app/src/main/java/com/petostr/p/engine/entities/: Entity.java  ImageEntity.java  NullModelEntity.java  TouchListener.java
app/src/main/java/com/petostr/p/engine/hardware/: DeviceMovement.java
app/src/main/java/com/petostr/p/engine/util/: TouchPicker.java
app/src/main/jni/: agrlog.h  assimpio.c  assimpio.h  files.c  files.h  img_renderer.c  img_renderer.h  jni_helper.c  jni_helper.h  light.h  loader.c  mesh.c  mesh.h  model.h  pv_matrices.h  renderer.c  scene.c  scene.h  shader_program.c  shader_program.h  text_renderer.c  text_renderer.h  texture.h  util.h
app/src/main/jni/include/: agrlog.h  assimpio.h  files.h  loader.h  mesh.h  model.h  shader_program.h  texture.h  util.h
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/p/agreality/: ExampleUnitTest.java
(+55 files in other folders)
